--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ overrides/template/gregtech_cape.dat
 overrides/template/stats/e8e08277-cc3d-4b35-8ac9-da0af044815c.json
 overrides/template/stats/e8e08277-cc3d-4b35-8ac9-da0af044815c.json
 overrides/template/advancements/e8e08277-cc3d-4b35-8ac9-da0af044815c.json
+instance.cfg
+/natives/
