--- a/.minecraft/config/betterquesting.cfg
+++ b/.minecraft/config/betterquesting.cfg
@@ -9,6 +9,8 @@ general {
 
     # Enabled the popup notices when quests are completed or updated [default: true]
     B:"Quest Notices"=true
+
+    # The current questing theme [default: midnight:dark]
     S:Theme=midnight:dark
 
     # Jumps the user to the last opened quest [default: true]
