--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,6 @@ overrides/template/stats/e8e08277-cc3d-4b35-8ac9-da0af044815c.json
 overrides/template/advancements/e8e08277-cc3d-4b35-8ac9-da0af044815c.json
 instance.cfg
 /natives/
+.minecraft/hei_bookmarks.ini
+.minecraft/config/betterquesting.cfg
+.minecraft/config/betterquesting.cfg
