--- a/.minecraft/config/jei/jei.cfg
+++ b/.minecraft/config/jei/jei.cfg
@@ -5,15 +5,21 @@
 ##########################################################################################################
 # advanced
 #--------------------------------------------------------------------------------------------------------#
-# Advanced config options to change the way JEI functions.
+# Advanced config options to change the way HEI functions.
 ##########################################################################################################
 
 advanced {
-    # Move the JEI search bar to the bottom center of the screen. [default: false]
+    # When enabled, adds new bookmarks to the front of the bookmark list [default: false]
+    B:addBookmarksToFront=false
+
+    # Builds search trees on multiple threads concurrently, turn this off if you're experiencing extremely high load on your CPU when loading HEI [default: true]
+    B:asyncSearchTreeBuilding=true
+
+    # Move the HEI search bar to the bottom center of the screen. [default: false]
     B:centerSearchBarEnabled=false
     B:debugModeEnabled=false
 
-    # Choose if JEI should give ingredients direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
+    # Choose if HEI should give ingredients direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
     # [Default: mouse_pickup]
     # [Valid: [inventory, mouse_pickup]]
     S:giveMode=MOUSE_PICKUP
@@ -24,11 +30,30 @@ advanced {
     # The maximum height of the recipe GUI. [range: 175 ~ 5000, default: 350]
     I:maxRecipeGuiHeight=350
 
-    # How the mod name should be formatted in the tooltip for JEI GUIs. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
+    # How the mod name should be formatted in the tooltip for HEI GUIs. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
     S:modNameFormat=blue italic
-
-    # Enable JEI memory usage optimizations. [default: true]
     B:optimizeMemoryUsage=true
+
+    # Enable ultra low memory usage mode, can slow down searching by a lot however. [default: false]
+    B:ultraLowMemoryUsage=false
+}
+
+
+##########################################################################################################
+# misc
+#--------------------------------------------------------------------------------------------------------#
+# Miscellaneous config options
+##########################################################################################################
+
+misc {
+    # Disable to disallow mouse clicks to see recipes and usages when hovering over an ingredient [default: true]
+    B:mouseClickToSeeRecipes=true
+}
+
+
+rendering {
+    # Stops extremely frequent ingredient draw calls by using a render buffer, improves FPS in menus by up to 2-3x. But animations and glint will not be applied correctly. [default: false]
+    B:bufferIngredientRenders=false
 }
 
 
@@ -64,6 +89,12 @@ search {
     # [Valid: [enabled, require_prefix, disabled]]
     S:resourceIdSearchMode=DISABLED
 
+    # Includes advanced tooltips in search trees [WILL RELOAD SEARCH TREES] [default: false]
+    B:searchAdvancedTooltips=false
+
+    # Includes stripped diacritics version of strings in search trees [WILL RELOAD SEARCH TREES] [default: false]
+    B:searchStrippedDiacritics=false
+
     # Search mode for Tooltips (prefix: #)
     # [Default: enabled]
     # [Valid: [enabled, require_prefix, disabled]]
@@ -72,7 +103,6 @@ search {
 
 
 searchadvancedtooltips {
-    # config.jei.searchAdvancedTooltips.search.comment [default: false]
     B:search=false
 }
 
